# IndieStudio_2018

./: .gitignore  .travis.yml  Building.3ds  Building.blend  Building.fbx  Building.mtl  CMakeLists.txt  Makefile  game_tests  map.irr  module_tmp_tests  server_tests  sonar-project.properties  test.cpp  test2.json
Additional/googletest/: CTestTestfile.cmake
Additional/googletest/cmake/: internal_utils.cmake
Bomberman/: CMakeLists.txt
Bomberman/src/: main.cpp
Debug/: bomberman.ilk
bot/: CMakeLists.txt
bot/include/Bot/: Bot.hpp
bot/src/: Bot.cpp  EngineBot.cpp
client/: CMakeLists.txt
client/config/: JoinServerMenu.json  MainMenu.json  OptionsMenu.json  PauseMenu.json  audio.json  graphic.json  helpMenu.json
client/include/Client/: Audio.hpp  Client.hpp  Clock.hpp  ConfigManager.hpp  Core.hpp  CustomMenu.hpp  Entity.hpp  Graphic.hpp  GraphicLoader.hpp  LogicPause.hpp  MenuEvent.hpp  SFX.hpp
client/include/client/: ConfigManager.hpp  Irrlicht.hpp  SFX.hpp  client.hpp  core.hpp  entity.hpp
client/includes/client/: Core.hpp  Graphic.hpp
client/res/: Flower.3ds  Hongo.3ds
client/src/: CustomMenu.cpp  Irrlicht.cpp  MenuEvent.cpp  client.cpp  clock.cpp  core.cpp  entity.cpp
client/srcs/: Audio.cpp  Client.cpp  Clock.cpp  ConfigManager.cpp  Core.cpp  CustomMenu.cpp  Entity.cpp  Graphic.cpp  GraphicLoader.cpp  LogicPause.cpp  MenuEvent.cpp  menu.json
client/tests/: CMakeLists.txt  tests_clock.cpp
error/: CMakeLists.txt
error/include/Error/: Error.hpp
error/srcs/: Error.cpp
error/tests/: CMakeLists.txt  tests_error.cpp
game/: CMakeLists.txt
game/include/: Bomb.hpp  Character.hpp  Entity.hpp  EntityManager.hpp  Game.hpp  Generation.hpp  IEntity.hpp  Lib.hpp
game/include/Game/: Block.hpp  Bomb.hpp  BombUp.hpp  Bot.hpp  BrittleBlock.hpp  Character.hpp  Entity.hpp  EntityManager.hpp  Explosion.hpp  Fire.hpp  FireUp.hpp  Game.hpp  Generation.hpp  Ground.hpp  IEntity.hpp  Lib.hpp  MovableEntity.hpp  SpeedUp.hpp  WallPass.hpp
game/include/game/: Bomb.hpp  Character.hpp  EntityManager.hpp  Generation.hpp  IEntity.hpp  Lib.hpp
game/includes/game/: Entity.hpp
game/src/: Bomb.cpp  Character.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  Generation.cpp  main.cpp
game/srcs/: Block.cpp  Bomb.cpp  BombUp.cpp  Bot.cpp  BrittleBlock.cpp  Character.cpp  Entity.cpp  EntityManager.cpp  Explosion.cpp  Fire.cpp  FireUp.cpp  Game.cpp  Generation.cpp  Ground.cpp  MovableEntity.cpp  SpeedUp.cpp  WallPass.cpp
game/tests/: CMakeLists.txt  tests_character.cpp  tests_generation.cpp
lib/: gtest.lib  gtest_main.lib
lib/include/irrlicht/: SIrrCreationParameters.h
module_tmp/: CMakeLists.txt
module_tmp/src/: toto.cpp
module_tmp/tests/: CMakeLists.txt  test.cpp
server/: CMakeLists.txt  main.cpp
server/include/Server/: Room.hpp  Server.hpp  Session.hpp
server/include/server/: participant.hpp  room.hpp  server.hpp  session.hpp
server/includes/server/: Room.hpp  Server.hpp  Session.hpp
server/src/: room.cpp  server.cpp  session.cpp
server/srcs/: Room.cpp  Server.cpp  Session.cpp
server/tests/: CMakeLists.txt  tests_participant.cpp  tests_pause.cpp  tests_room.cpp  tests_server.cpp
sfx/: CMakeLists.txt
sfx/include/SFX/: Audio.hpp  SFX.hpp
sfx/srcs/: Audio.cpp  SFX.cpp
sfx/tests/: CMakeLists.txt  tests_audio.cpp  tests_music.cpp  tests_sound.cpp
src/: main.cpp
textures/: map.irr
utils/: CMakeLists.txt
utils/include/Utils/: ConfigManager.hpp  Packet.hpp
utils/src/: ConfigManager.cpp  Packet.cpp
utils/srcs/: ConfigManager.cpp  Packet.cpp
utils/tests/: CMakeLists.txt
